# finproof

./: .gitignore  ASSAY_BENCHMARK.xlsx  README.md  _ASSAY_PHASE2_INLINE_MANIFEST.json  _ASSAY_QI_V1_1_RETAIL_PLAN.md  _ASSAY_V1_PHASE1_MANIFEST.json  _CONSENSUS_SCORING_PLAN.md  analyze_assay_dataset.py  build_assay_v1_pipeline.py  consensus_score.py  generate_assay_attacks_inline.py  generate_assay_qi_v1_1_retail.py  pyproject.toml  qcbm_anneal.py  qcbm_boundary.py  qcbm_core.py  qcbm_difficulty.py  qcbm_enrich.py  qcbm_joint.py  qcbm_pg_boundary.py  qcbm_sample_seeds.py  run_krait_qi.py  score_assay_semalith.py  utils.py
finproof/: DATASET_CARD.md  _FINPROOF_ENRICHMENT_PLAN.md  _FINPROOF_V1_MANIFEST.json  eval_results_llamaguard1b.json
finproof/enrich/: generate_b04_responses.py
finproof/eval/: contamination_audit.py  run_eval.py  scoring.py  submit.py
finproof/scoring_service/: main.py
finproof/tiers/: RESEARCH_CARD.md  TAXONOMY.md  _FINPROOF_V1_TIERS_MANIFEST.json  consensus_gold.jsonl  finproof_v1_1_hindi.jsonl  finproof_v1_tier1_benign.jsonl  finproof_v1_tier2_public.jsonl
src/finproof_bench/: README.md  __init__.py  eval.yaml  finproof_bench.py
