[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "finproof-bench"
version = "1.0.0"
description = "FinProof Bench — BFSI adversarial safety benchmark for Inspect AI"
readme = "src/finproof_bench/README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.9"
dependencies = [
    "inspect-ai>=0.3",
    "datasets>=2.14",
]
keywords = ["bfsi", "safety", "benchmark", "guardrail", "finproof", "inspect-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://finproof.ai"
Repository = "https://github.com/Zytra-ai/finproof"
Dataset = "https://huggingface.co/datasets/Zytra/finproof-bench"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
finproof_bench = ["eval.yaml", "README.md"]
